# aeop

./: .gitignore  CMakeLists.txt  README.md  aeop.c  config.m4  config.w32  php_aeop.h  test  test.php
tests/: 001.phpt  002.phpt  003.phpt
